# webtronics

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pytest.ini  setup.cfg
src/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
src/api/: deps.py  exceptions.py  permissions.py  route.py
src/api/v1/: route_auth.py  route_posts.py  route_users.py
src/apps/posts/: exceptions.py  models.py  schemas.py  services.py
src/apps/users/: exceptions.py  models.py  schemas.py  services.py
src/apps/users/auth/: bearer.py  hashing.py  jwt.py  utils.py
src/core/: cache.py  config.py  session.py
src/db/: models.py  repository.py
src/migrations/: env.py
src/migrations/versions/: 91861b204542_0001_initial.py  d35192e3f949_unique_posts_0002.py
tests/: conftest.py
tests/test_routes/: test_posts.py  test_users.py
tests/utils/: auth.py
